--- a/bsep/views/create.gohtml
+++ b/bsep/views/create.gohtml
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group col-md-2">
                     <label for="inputZip">Serial Number</label>
-                    <input type="text" name ="serialnumber" class="form-control" id="inputSerialNumber" placeholder="122">
+                    <input type="text" name ="serialnumber" class="form-control" id="inputSerialNumber">
             </div>
             <div class="form-group col-md-2">
                     <label for="inputZip">Postal Code(zip)</label>
@@ -79,9 +79,17 @@
                         {{end}}
                     </select>
                 </div>
+                <div class="form-group col-md-4">
+                    <label>Password...</label>
+                    <input type="password">
+                </div>
             </div>
             <br>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary">Create certificate</button>
         </form>
     </div>
+    <script>
+        var x = document.getElementById("inputSerialNumber");
+        x.value = Math.floor((Math.random() * 1000) + 1).toString()
+    </script>
 </body>
